2000-10-31  Pavel Roskin  <proski@gnu.org>

	* autoupdate.sh: Check that $sed understands the meaning of "\b"
	instead of checking "--version".

2000-10-31  Akim Demaille  <akim@epita.fr>

	Move the handling of classified warnings into M4sugar.

	* m4sugar.m4 (m4_diagnose): Remove.
	(m4_warning): New.
	* acgeneral.m4 (AC_WARNING_IFELSE, _AC_WARNING_IFELSE)
	(_AC_WARNING_ERROR_IFELSE, __AC_WARNING_ERROR_IFELSE)
	(_AC_DIAGNOSE, AC_DIAGNOSE): Rename as...
	* m4sugar.m4 (m4_warning_ifelse, _m4_warning_ifelse)
	(_m4_warning_error_ifelse, __m4_warning_error_ifelse)
	(_m4_warn, m4_warn): these.
	* acgeneral.m4 (AC_DIAGNOSE): Wrapper around `m4_warn'.
	* autoconf.sh: Define `m4_warnings' instead of `_AC_WARNINGS'.

2000-10-30  Pavel Roskin  <proski@gnu.org>

	* acspecific.m4 (AC_PATH_XTRA): Use AC_LANG_PROGRAM() as the
	argument to AC_LINK_IFELSE.

2000-10-30  Pavel Roskin  <proski@gnu.org>

	* m4sh.m4 (AS_EXIT): Use "false" for exit code 1, ":" for 0.
	* acgeneral.m4 (AC_MSG_ERROR): Don't use m4_default for the
	second argument - AS_EXIT takes care of it.

2000-10-30  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4: Formatting changes.

2000-10-30  Akim Demaille  <akim@epita.fr>

	Move the handling of diversions into M4sugar.

	* acgeneral.m4 (_AC_DIVERT, AC_DIVERT, AC_DIVERT_PUSH)
	(AC_DIVERT_POP): Move to...
	* m4sugar.m4 (_m4_divert, m4_divert, m4_divert_push)
	(m4_divert_pop): here.
	* acgeneral.m4: Adjust to use only the M4sugar macros.
	Nevertheless...
	(AC_DIVERT_PUSH, AC_DIVERT_POP): New wrappers around the M4sugar
	macros.
	(_AC_DIVERT(...)): Rename all the diversions names as...
	(_m4_divert(...)): these.

2000-10-30  Pavel Roskin  <proski@gnu.org>

	* m4sh.m4 (AS_EXIT): New macro that exits and makes sure that $?
	is set correctly within the exit trap.
	(AS_TMPDIR): Use it.
	* acgeneral.m4 (AC_MSG_ERROR): Likewise,

2000-10-29  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (AC_CHECK_TOOL): Set VARIABLE also when using the
	cache. From Jim Meyering.